--- a/style.css
+++ b/style.css
@@ -1,9 +1,127 @@
-html, body {
+@font-face {
+  font-family: "Suisse Intl";
+  src: url("./src/fonts/SuisseIntl-Regular-WebS.woff") format("woff");
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Suisse Intl";
+  src: url("./src/fonts/SuisseIntl-SemiBold-WebS.woff") format("woff");
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+}
+
+:root {
+  --font-size-small: 20px;
+  --font-size-large: 64px;
+
+  --color-white: #fff;
+  --color-black: #000;
+  --color-bg: var(--color-white);
+  --color-fg: var(--color-black);
+
+  --spacing-small: 20px;
+  --spacing-medium: 100px;
+  --spacing-large: 200px;
+}
+
+html {
   margin: 0;
   padding: 0;
+}
+
+body {
+  margin: 0;
+  padding: var(--spacing-small);
+  background-color: var(--color-bg);
+  color: var(--color-fg);
+  font-family: "Suisse Intl";
+  font-weight: 400;
 }
 
 canvas {
   display: block;
   
+}
+
+#intro {
+  white-space: pre-wrap;
+}
+
+.big-text {
+  font-size: var(--font-size-large);
+  line-height: var(--spacing-medium);
+}
+
+.highlight {
+  font-weight: 600;
+  text-decoration: underline;
+  text-decoration-thickness: 7px;
+  text-underline-offset: 8px;
+}
+
+.home {
+  padding: var(--spacing-small);
+}
+
+.home-top-links {
+  display: flex;
+  width: 100%;
+  height: 100px;
+  margin: 0;
+}
+
+.nav-link {
+  display: flex;
+  flex: 1 1 0;
+  align-items: flex-start;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  color: var(--color-fg);
+  font-size: var(--font-size-small);
+  line-height: 1;
+  text-decoration: none;
+}
+
+.nav-link.highlight-header {
+  font-weight: 600;
+  text-transform: uppercase;
+  text-decoration: underline;
+  text-decoration-thickness: 3px;
+  text-underline-offset: 3px;
+}
+
+.nav-link-left {
+  justify-content: flex-start;
+}
+
+.nav-link-right {
+  justify-content: flex-end;
+}
+
+.content {
+  width: 100%;
+  margin: 0;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  gap: var(--spacing-small);
+}
+
+.block {
+  aspect-ratio: 1 / 1;
+  overflow: hidden;
+}
+
+.block img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
