--- a/style.css
+++ b/style.css
@@ -15,7 +15,9 @@
 }
 
 :root {
-  --font-size-small: 20px;
+  --font-size-xsmall: 12px;
+  --font-size-small: 16px;
+  --font-size-medium: 20px;
   --font-size-large: 64px;
 
   --color-white: #fff;
@@ -82,17 +84,21 @@ canvas {
   margin: 0;
   padding: 0;
   color: var(--color-fg);
-  font-size: var(--font-size-small);
+  font-size: var(--font-size-medium);
   line-height: 1;
   text-decoration: none;
 }
 
-.nav-link.highlight-header {
-  font-weight: 600;
+.highlight-header {
+  font-weight: 400;
   text-transform: uppercase;
   text-decoration: underline;
   text-decoration-thickness: 3px;
   text-underline-offset: 3px;
+}
+
+.work-page .nav-link.highlight-header {
+  font-weight: 600;
 }
 
 .nav-link-left {
@@ -119,9 +125,113 @@ canvas {
   overflow: hidden;
 }
 
+.block-link {
+  color: inherit;
+  text-decoration: none;
+}
+
 .block img {
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.center-header {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  align-items: start;
+  height: 100px;
+}
+
+.center-header .highlight-header {
+  text-decoration-thickness: 2px;
+  text-underline-offset: 3px;
+}
+
+.translate-btn {
+  display: flex;
+  align-items: flex-start;
+  justify-self: end;
+  height: 100px;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  background: transparent;
+  color: var(--color-fg);
+  font-family: "Suisse Intl";
+  font-size: var(--font-size-medium);
+  line-height: 1;
+  cursor: pointer;
+}
+
+.header-center {
+  display: flex;
+  align-items: flex-start;
+  height: 100px;
+  justify-self: center;
+  font-size: var(--font-size-medium);
+  font-weight: 600;
+  text-transform: uppercase;
+  line-height: 1;
+}
+
+.center-content {
+  width: fit-content;
+  max-width: 100%;
+  margin: 0 auto 0;
+  font-family: "Times New Roman", Times, serif;
+  font-size: var(--font-size-medium);
+}
+
+.creative-page .center-content {
+  max-width: 500px;
+}
+
+.center-content p {
+  font-size: var(--font-size-small);
+  margin: 0 0 20px;
+}
+
+.creative-page .center-content p:nth-of-type(1),
+.creative-page .center-content p:nth-of-type(3) {
+  font-style: italic;
+}
+
+.center-inline-link {
+  font-weight: 500;
+  color: inherit;
+  text-decoration: underline;
+  text-underline-offset: 2px;
+}
+
+.center-canvas {
+  width: min(500px, 100%);
+  aspect-ratio: 4 / 3;
+  margin: 12px 0 20px;
+}
+
+.center-canvas canvas {
+  width: 100% !important;
+  height: 100% !important;
+}
+
+.center-contact {
+  margin-top: 100px;
+  font-family: "Suisse Intl";
+  font-size: var(--font-size-small);
+}
+
+.center-contact-title {
+  margin-bottom: 12px;
+}
+
+.center-contact-link {
+  display: block;
+  width: fit-content;
+  margin-bottom: 14px;
+  color: inherit;
+  font-weight: 600;
+  text-decoration: underline;
+  text-underline-offset: 3px;
 }
