--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 }
 
 :root {
-  --font-size-xsmall: 12px;
+  --font-size-xsmall: 14px;
   --font-size-small: 16px;
   --font-size-medium: 20px;
   --font-size-large: 64px;
@@ -101,6 +101,11 @@ canvas {
   font-weight: 600;
 }
 
+.work-page .home-top-links {
+  margin-bottom: var(--spacing-small);
+  gap: var(--spacing-small);
+}
+
 .nav-link-left {
   justify-content: flex-start;
 }
@@ -174,6 +179,57 @@ canvas {
   font-weight: 600;
   text-transform: uppercase;
   line-height: 1;
+}
+
+.project-page .center-header {
+  height: auto;
+  margin-bottom: 40px;
+}
+
+.project-page .header-center {
+  height: auto;
+  flex-direction: column;
+  align-items: center;
+  gap: var(--spacing-small);
+}
+
+.project-title {
+  font-size: var(--font-size-medium);
+  font-weight: 600;
+  text-transform: uppercase;
+  line-height: 1;
+  text-align: center;
+}
+
+.project-subtext {
+  font-family: "Times New Roman", Times, serif;
+  font-size: var(--font-size-xsmall);
+  font-style: italic;
+  font-weight: 400;
+  line-height: 1.1;
+  text-transform: none;
+  text-align: center;
+}
+
+.project-page .center-content {
+  width: 100%;
+  max-width: 100%;
+}
+
+.project-page .center-content p {
+  width: fit-content;
+  margin: 0 auto var(--spacing-small);
+}
+
+.project-image {
+  width: 100%;
+  margin: 0 0 var(--spacing-small);
+}
+
+.project-image img {
+  display: block;
+  width: 100%;
+  height: auto;
 }
 
 .center-content {
